# utl-tcnc

./: .gitignore  README.rst  precommit  pyproject.toml  requirements-dev.txt
.github/workflows/: publish_pypi.yml  push_docs.yml
docs/: conf.py  index.rst  installation.rst  requirements.txt  usage_tcnc.rst
docs/_themes/sphinx13/: layout.html  theme.conf
docs/_themes/sphinx13/static/: sphinx13.css
docs/inkscape/: inx.html
inkscape/: .gitignore  tcnc.inx
src/tcnc/: __main__.py  fillet.py  gcode.py  gcodesvg.py  offset.py  paintcam.py  simplecam.py  tcnc.py  toolpath.py
test/: conftest.py  test_t1000.py
tests/: conftest.py  test_t1000.py
